linked new page

--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
               </div>
             </div>
             <div class="your-library list">
-              <div class="library betweengap">
-                <img class="gray-color" src="images/nav-library.png" width="24px">
+              <div class="library">
+                <div class="betweengap">
+                  <img class="gray-color" src="images/nav-library.png" width="24px">
                 <a href="#" class="gray-color">Your Library</a>
                 <i class="fa-regular fa-plus gray-color "></i>
                 <i class="fa-solid fa-arrow-right gray-color"></i>
+                </div>
+                <div class="playlist-btn d-flex justify-content-between mt-3">
+                  <button type="button" class="btn btn-light px-3 rounded-5"><a href="playlist.html">Play List</a></button>
+                  <button type="button" class="btn btn-light px-3 rounded-5"><a href="playlist.html">Favourites</a></button>
+                </div>
               </div>
               <div class="createdlist">
                 <div class="betweengap">
@@ -142,27 +148,6 @@
               </div>
 
             </div>
-
-            <!-- <div>
-              <ul class="list">
-                <li><a href="#" class="gray-color">Fav</a></li>
-                <li><a href="#" class="gray-color">Daily Mix1</a></li>
-                <li><a href="#" class="gray-color">Discover Weekly</a></li>
-                <li><a href="#" class="gray-color">Telugu</a></li>
-                <li><a href="#" class="gray-color">Dance/Electronic Mix</a></li>
-                <li><a href="#" class="gray-color">EDM/Popular</a></li>
-              </ul>
-            </div> -->
-
-            <!-- <div class="betweengap">
-              <div>
-                <img
-                  src="images/grommet-icons_install-option.svg"
-                  alt="download-icon"
-                />
-              </div>
-              <button>Install app</button>
-            </div> -->
           </nav>
         </header>
       </div>
@@ -331,16 +316,16 @@
             <img src="images/bx_bxs-heart.svg" />
           </div>
           <div class="foot-section2">
-            <div class="foots2-controls">
-              <img src="images/raphael_shuffle.svg" />
+            <div class="foots2-controls ">
+              <img src="images/raphael_shuffle.svg" class="" />
               <img src="images/bx_bx-skip-previous.svg" />
               <img src="images/gridicons_play.svg" />
               <img src="images/bx_bx-skip-next.svg" />
               <img src="images/repeat.svg" />
             </div>
-            <div class="foots2-playtimeline">
+            <div class="foots2-playtimeline ">
               <span>2:11</span>
-              <input type="range" min="0" max="100" class="timeline-bar" />
+              <input type="range" min="0" max="100" class="timeline-bar gray-color" />
               <span>3:42</span>
             </div>
           </div>
