added some orginal spotify effects,hover effects etc

--- a/index.html
+++ b/index.html
@@ -49,17 +49,19 @@
                 <i class="fa-regular fa-plus gray-color "></i>
                 <i class="fa-solid fa-arrow-right gray-color"></i>
                 </div>
-                <div class="playlist-btn d-flex justify-content-between mt-3">
+                <div class="playlist-btn d-flex justify-content-between ">
                   <button type="button" class="btn btn-light px-3 rounded-5"><a href="playlist.html">Play List</a></button>
                   <button type="button" class="btn btn-light px-3 rounded-5"><a href="playlist.html">Favourites</a></button>
                 </div>
               </div>
               <div class="createdlist">
-                <div class="betweengap">
-                  <div class="create-playlist-icon box">
-                    <img src="images/fi-ss-plus-small.svg" alt="playlist icon" />
+                <div>
+                  <div class="betweengap">
+                    <div class="create-playlist-icon box">
+                      <img src="images/fi-ss-plus-small.svg" alt="playlist icon" />
+                    </div>
+                      <a href="#" class="gray-color">Create PlayList</a>
                   </div>
-                  <a href="#" class="gray-color">Create PlayList</a>
                 </div>
                 <div class="betweengap">
                   <div class="liked-songs-icon box">
@@ -201,14 +203,15 @@
 
           <section class="playlist-container">
             <div class="playlist-head">
-              <h2>Shows You Might Like</h2>
-              <p class="gray-text">SEE ALL</p>
+              <h2 class="my-4">Shows You Might Like</h2>
+              <a href="#" class="gray-color">Show all</a>
             </div>
             <div class="playlists">
               <div class="playlist-item">
                 <div>
                   <img src="images/Rectangle 16.png" />
                   <h4>Weekly Motivation</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">Ben Ina Scot</p>
                 </div>
               </div>
@@ -217,6 +220,7 @@
                 <div>
                   <img src="images/Rectangle 16 (1).png" />
                   <h4>Meditation Self</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">Ina Scot</p>
                 </div>
               </div>
@@ -225,6 +229,7 @@
                 <div>
                   <img src="images/Rectangle 16 (2).png" />
                   <h4>Words beyond act</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">James Scot</p>
                 </div>
               </div>
@@ -233,6 +238,7 @@
                 <div>
                   <img src="images/Rectangle 16 (3).png" />
                   <h4>Alexa Show</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">Alexa</p>
                 </div>
               </div>
@@ -241,6 +247,7 @@
                 <div>
                   <img src="images/Rectangle 16 (3).png" />
                   <h4>Alexa Show</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">Alexa</p>
                 </div>
               </div>
@@ -249,6 +256,7 @@
                 <div>
                   <img src="images/Rectangle 16.png" />
                   <h4>Weekly Motivation</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">Ben Ina Scot</p>
                 </div>
               </div>
@@ -257,6 +265,7 @@
                 <div>
                   <img src="images/Rectangle 16 (1).png" />
                   <h4>Meditation Self</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">Ina Scot</p>
                 </div>
               </div>
@@ -265,6 +274,7 @@
                 <div>
                   <img src="images/Rectangle 16 (2).png" />
                   <h4>Words beyond act</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">James Scot</p>
                 </div>
               </div>
@@ -273,6 +283,7 @@
                 <div>
                   <img src="images/Rectangle 16 (3).png" />
                   <h4>Alexa Show</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">Alexa</p>
                 </div>
               </div>
@@ -281,6 +292,7 @@
                 <div>
                   <img src="images/Rectangle 16 (3).png" />
                   <h4>Alexa Show</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">Alexa</p>
                 </div>
               </div>
@@ -289,6 +301,7 @@
                 <div>
                   <img src="images/Rectangle 16 (1).png" />
                   <h4>Meditation Self</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">Ina Scot</p>
                 </div>
               </div>
@@ -297,6 +310,7 @@
                 <div>
                   <img src="images/Rectangle 16 (2).png" />
                   <h4>Words beyond act</h4>
+                  <img src="images/thumb_play.svg" class="playlist-hoverplay" width="50px">
                   <p class="gray-text">James Scot</p>
                 </div>
               </div>
@@ -305,7 +319,7 @@
         </section>
       </main>
 
-      <footer>
+      <footer class="footer">
         <div class="foot-player">
           <div class="foot-section1">
             <img src="images/Rectangle 20.png" />
