added hover effects for playlist and footer adjusted accordingly

--- a/playlist.html
+++ b/playlist.html
@@ -221,7 +221,7 @@
                 <th><i class="fa-regular fa-clock"></i></th>
               </tr>
               <tr>
-                <td>1</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>1</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -230,7 +230,7 @@
                 </td>
               </tr>
               <tr>
-                <td>2</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>2</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -239,7 +239,7 @@
                 </td>
               </tr>
               <tr>
-                <td>3</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>3</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -248,7 +248,7 @@
                 </td>
               </tr>
               <tr>
-                <td>4</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>4</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -257,7 +257,7 @@
                 </td>
               </tr>
               <tr>
-                <td>5</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>5</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -266,7 +266,7 @@
                 </td>
               </tr>
               <tr>
-                <td>6</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>6</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -275,7 +275,7 @@
                 </td>
               </tr>
               <tr>
-                <td>7</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>7</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -284,7 +284,7 @@
                 </td>
               </tr>
               <tr>
-                <td>8</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>8</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -293,7 +293,7 @@
                 </td>
               </tr>
               <tr>
-                <td>9</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>9</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -302,7 +302,7 @@
                 </td>
               </tr>
               <tr>
-                <td>10</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>10</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -311,7 +311,7 @@
                 </td>
               </tr>
               <tr>
-                <td>11</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>11</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -320,7 +320,7 @@
                 </td>
               </tr>
               <tr>
-                <td>12</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>12</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -329,7 +329,7 @@
                 </td>
               </tr>
               <tr>
-                <td>13</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>13</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -338,7 +338,7 @@
                 </td>
               </tr>
               <tr>
-                <td>14</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>14</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -347,7 +347,7 @@
                 </td>
               </tr>
               <tr>
-                <td>15</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>14</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -356,7 +356,7 @@
                 </td>
               </tr>
               <tr>
-                <td>16</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>15</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -365,7 +365,7 @@
                 </td>
               </tr>
               <tr>
-                <td>17</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>16</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -374,7 +374,7 @@
                 </td>
               </tr>
               <tr>
-                <td>18</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>17</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -383,7 +383,7 @@
                 </td>
               </tr>
               <tr>
-                <td>19</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>18</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
@@ -392,7 +392,7 @@
                 </td>
               </tr>
               <tr>
-                <td>20</td>
+                <td><i class="fa-solid fa-play table-td-play"></i><p>19</p></td>
                 <td>We’re Good <br />Dua Lipa</td>
                 <td>Future Nostalgia (The Moonlight Edition)</td>
                 <td>28-oct-2023</td>
