modified login button

--- a/playlist.html
+++ b/playlist.html
@@ -176,9 +176,7 @@
               <i class="fa-regular fa-circle-down"></i> Install App
             </button>
             <div class="login">
-              <img src="images/Ellipse 3.svg" />
-              <p>Abhi</p>
-              <img src="images/fi-ss-caret-down.svg" />
+              <button type="button" class="login-btn"><img src="images/goku-programmer.png" class="login-img">Abhi <img src="images/fi-ss-caret-down.svg"></button>
             </div>
           </div>
         </div>
