--- a/index.html
+++ b/index.html
@@ -169,9 +169,7 @@
             <button type="button" class="btn btn-light rounded-5 px-3 mx-2" >Explore Premium</button>
             <button type="button" class="btn btn-dark rounded-5 px-3 mx-2"><i class="fa-regular fa-circle-down"></i> Install App</button>
           <div class="login">
-            <img src="images/Ellipse 3.svg" />
-            <p>Abhi</p>
-            <img src="images/fi-ss-caret-down.svg" />
+            <button type="button" class="login-btn"><img src="images/goku-programmer.png" class="login-img">Abhi <img src="images/fi-ss-caret-down.svg"></button>
           </div>
           </div>
         </div>
