added home link in anchor element  home

--- a/playlist.html
+++ b/playlist.html
@@ -34,7 +34,7 @@
               </div>
               <div class="betweengap">
                 <a href="#"><img src="images/nav-home.svg" alt="home-icon" /></a
-                ><a href="#" class="nav-text">Home</a>
+                ><a href="index.html" class="nav-text">Home</a>
               </div>
               <div class="search betweengap">
                 <i class="fa-solid fa-magnifying-glass fa-lg gray-color"></i>
